--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SMARTBOT</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel = "icon" href = "https://ibb.co/x8kxKbx" type = "image/x-icon">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
