second big commit

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
 
+
     <div class = "container">
       <div class = "header">
         <div class = "smile"></div>
@@ -27,6 +28,7 @@
         <img src="https://i.ibb.co/bgy5QGC/image-removebg-preview.png" class = "logo" />
       </div>
       <div id = "logs">
+        <div class = "message bot">Hey there, I am an FAQ bot currently in development.</div>
       </div>
       <div class = "footer">
         <input type = "text" id = "inputbox" placeholder = "Type something..." autocomplete = "off"></input>
