--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
         <button type = "button" class = "button" onclick = "main(takeInput())"><i style="font-size:30px; color: white;" class="fa fa-send-o fa-5x"></i></button>
       </div>
     </div>
-	<script src="index.js"></script>
+	<script src="index.js" defer></script>
   </body>
 </html>
